# ic-lattice

./: LICENSE  README.md  pyproject.toml
src/ic_lattice/: __init__.py  sim.py  viz.py
