[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ic_lattice"
version = "0.1.0"
description = "Monte Carlo lattice simulation for A-B molecule interactions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Justin Bois", email = "bois@caltech.edu"},
]
keywords = ["monte-carlo", "educational", "simulation", "lattice", "physics", "statistical-mechanics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "numba>=0.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/justinbois/ic-lattice"
Repository = "https://github.com/justinbois/ic-lattice"
Issues = "https://github.com/justinbois/ic-lattice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ic_lattice"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9"
numpy = ">=1.20"
numba = ">=0.55"

[tool.pixi.pypi-dependencies]
ic-lattice = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"
black = ">=23"
ruff = ">=0.1"

[tool.pixi.feature.publish.dependencies]
twine = ">=5"
build = ">=1"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
publish = { features = ["publish"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.feature.publish.tasks]
build-dist = "python -m build"
publish-test = { cmd = "twine upload --repository testpypi dist/*", depends-on = ["build-dist"] }
publish = { cmd = "twine upload dist/*", depends-on = ["build-dist"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]
